# sessiontrans-js2html

./: .gitignore  README.md  pyproject.toml
src/session_trans/: __init__.py  cli.py  masker.py  parser.py  renderer.py
src/session_trans/templates/: transcript.html
